Factor out JFRProcessor into its own library